# sombra-desktop

./: .env.example  .gitignore  BUILD.md  CHANGELOG.md  CLAUDE.md  README.md  build_windows.bat  install.sh  installer.iss  pyproject.toml  sombra.desktop  sombra.spec  test_vad.py  uninstall.sh  version_info.txt
.claude/: qa_scenarios.json  swarm_history.json
.github/workflows/: build-windows.yml  ci.yml
models/: sombra.ppn
src/sombra/: __init__.py  __main__.py  app.py  entry.py
src/sombra/config/: __init__.py  settings.py
src/sombra/core/: __init__.py  async_bridge.py  events.py  logging_config.py  session.py
src/sombra/data/: __init__.py  chat_repository.py  database.py  models.py
src/sombra/services/: __init__.py  audio_service.py  hotkey_service.py  remote_commands.py  sombra_service.py  sound_service.py  swarm_service.py  tts_service.py  update_service.py  wakeword_service.py  whisper_service.py
src/sombra/themes/: __init__.py  colors.py  theme_manager.py
src/sombra/ui/: __init__.py  main_window.py  system_tray.py  utils.py
src/sombra/ui/components/: __init__.py  agent_detail_panel.py  agent_output_panel.py  agent_status_card.py  chat_bubble.py  chat_sidebar.py  log_panel.py  session_list_widget.py  status_card.py  update_dialog.py  (+1 more)
tests/: __init__.py  conftest.py  test_agent_status_card.py  test_agents_page.py  test_colors.py  test_connection_indicator.py  test_help_page.py  test_main_window_connection_indicator.py  test_scifi_theme.py  test_theme_manager.py  test_ui_components.py  test_utils.py
training/: README.md  sombra_wakeword.yaml
(+18 files in other folders)
