[project]
name = "sombra-desktop"
version = "0.2.0"
description = "Voice-enabled AI assistant desktop application for Sombra"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Danny", email = "danny@sombra.dev"}
]
keywords = ["voice", "assistant", "ai", "desktop", "pyside6"]

dependencies = [
    "PySide6>=6.6.0",
    "httpx>=0.25.0",
    "httpx-sse>=0.4.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "pynput>=1.7.6",
    "python-dotenv>=1.0.0",
    "markdown>=3.5.0",
    "Pygments>=2.17.0",
    "PySide6-Fluent-Widgets>=1.7.0",
    "pvporcupine>=3.0.0",
    "pyaudio>=0.2.14",
    "silero-vad>=5.1",
    "torch>=2.0.0",
    "packaging>=23.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
sombra = "sombra.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sombra"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
